@@ -32,7 +32,10 @@
       %span.label.label-primary
         = tag
   %td
-    #{time_ago_in_words(runner.created_at)} ago
+    - if runner.contacted_at
+      #{time_ago_in_words(runner.contacted_at)} ago
+    - else
+      Never
   %td
     .pull-right
       = link_to 'Edit', admin_runner_path(runner), class: 'btn btn-small'
