@@ -40,7 +40,7 @@
       %th Projects
       %th Builds
       %th Tags
-      %th Registered
+      %th Last contact
       %th
 
   = render @runners
