@@ -29,7 +29,7 @@
       %th Description
       %th Last build
       %th Tags
-      %th Registered
+      %th Last contact
       %th
 
   = render @runners
