@@ -1,0 +1,5 @@
+class AddContactedAtToRunner < ActiveRecord::Migration
+  def change
+    add_column :runners, :contacted_at, :datetime, null: true
+  end
+end
